--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
           </div>
       </div>
       <div class="row justify-content-center text-center">
-          <div class="col-3 col-md">
-            <a href="#">
-              <img src="img/auto.png" class="icons">
-            </a>
-          </div>
-          <div class="col-3 col-md">
-            <a href="#">
-              <img src="img/pickcarga.png" class="icons">
-            </a>
-          </div>
-          <div class="col-3 col-md">
-            <a href="#">
-              <img src="img/pickp.png" class="icons">
-            </a>
-          </div>
+        <div class="col-3 col-md">
+          <a href="#">
+            <img src="img/auto.png" class="icons">
+          </a>
+        </div>
+        <div class="col-3 col-md">
+          <a href="#">
+            <img src="img/pickcarga.png" class="icons">
+          </a>
+        </div>
+        <div class="col-3 col-md">
+          <a href="#">
+            <img src="img/pickp.png" class="icons">
+          </a>
+        </div>
       </div>
       <div class="row">
           <div class="col-12">
@@ -44,14 +44,13 @@
    
   <footer class="footdynamic">
     <div style="background: rgba(255,255,255,0) !important; text-align: center;">
-      <img src="https://i.ibb.co/xCZWp5B/AUTOEVALUA-CASBCOAZ.png" style="width: 10em; padding: 30px 0px 20px 0px;">
+      <img src="img/logo_aecasbco.png" style="width: 10em; padding: 30px 0px 20px 0px;">
     </div>
     <div class="container-fluid" style="background: rgba(255,255,255,.7);">
       <div class="row justify-content-center">
           <div class="col-12 text-center">
           <p style="font-size: 11px; margin-bottom: 0px; margin-top: 10px;">AutoEvalua® Seguros powered by:</p>      
-          <img src="img/logodynamic.png" style="width: 90px; padding: 0px">
-        <p style="font-size: 11px; color: #0053a0;">CNSF - Oficio Autorización:06-367-11-1.2/04806</p>      
+          <img src="img/logodynamic.png" style="width: 90px; padding: 0px">    
       </div>
       </div>  
     </div>
