--- a/indexlogin.html
+++ b/indexlogin.html
@@ -9,22 +9,22 @@
 </head>
 <body class="bgIMG">
   <header class="logotype" style="background-color: #FFF !important; padding: 1em 0px 0px">
-    <div>
-      <img src="img/logocas.png" alt="" style="height: auto; width: 15em; padding-left: 2em; padding-top: 10px;">
-      <img src="https://i.ibb.co/LrkbXDw/AUTOEVALUA-CASGRIS.png" alt="Logo Autoevalua" style="height: auto; width: 10em; position: absolute; right: 2em;">
+    <div class="logoss">
+      <img src="img/logocas.png" alt="" style="height: auto; width: 30vh; padding-left: 2em; padding-top: 10px;">
+      <img src="https://i.ibb.co/LrkbXDw/AUTOEVALUA-CASGRIS.png" alt="Logo Autoevalua" style="height: auto; width: 22vh; position: absolute; right: 2em;">
     </div>
   </header>
   
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="loginfull">
+        <div class="loginfull" style="margin: 0 20px;right: 0px;">
           <div>
             <h4 style="color: #1a5da3;">Ingresar</h4>
             <form>
               <input type="text" name="usuario" class="username form-control" placeholder="Usuario"/>
               <input type="password" name="contraseña" class="password form-control" placeholder="Contraseña"/>
-              <input class="button login" type="submit" value="Login" />
+              <input class="button loginin" type="submit" value="Login" />
             </form>
           </div>
         </div>
@@ -37,8 +37,7 @@
       <div class="row justify-content-center">
           <div class="col-12 text-center">
           <p style="font-size: 11px; margin-bottom: 0px; margin-top: 10px;">AutoEvalua® Seguros powered by:</p>      
-          <img src="img/logodynamic.png" style="width: 90px; padding: 0px">
-        <p style="font-size: 11px; color: #0053a0;">CNSF - Oficio Autorización:06-367-11-1.2/04806</p>      
+          <img src="img/logodynamic.png" style="width: 90px; padding: 0px">    
       </div>
       </div>  
     </div>
