--- a/indexlogin.html
+++ b/indexlogin.html
@@ -10,7 +10,7 @@
 <body class="bgIMG">
   <header class="logotype" style="background-color: #FFF !important; padding: 1em 0px 0px">
     <div class="logoss">
-      <img src="img/logocas.png" alt="" style="height: auto; width: 30vh; padding-left: 2em; padding-top: 10px;">
+      <img src="https://mcpoe.github.io/cas/img/logoCAS.png" alt="" style="height: auto; width: 30vh; padding-left: 2em; padding-top: 10px;">
       <img src="https://i.ibb.co/LrkbXDw/AUTOEVALUA-CASGRIS.png" alt="Logo Autoevalua" style="height: auto; width: 22vh; position: absolute; right: 2em;">
     </div>
   </header>
