--- a/indexlogin.html
+++ b/indexlogin.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bgIMG">
   <header class="logotype" style="background-color: #FFF !important; padding: 1em 0px 0px">
-    <div class="logoss">
+    <div>
       <img src="https://mcpoe.github.io/cas/img/logoCAS.png" alt="" style="height: auto; width: 28vh; padding-left: 2em; padding-top: 10px;">
       <img src="https://i.ibb.co/LrkbXDw/AUTOEVALUA-CASGRIS.png" alt="Logo Autoevalua" style="height: auto; width: 20vh; position: absolute; right: 2em;">
     </div>
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="loginfull" style="margin: 0 20px;right: 0px;">
+        <div class="loginfull">
           <div>
             <h4 style="color: #1a5da3;">Ingresar</h4>
             <form>
