--- a/indexshare.html
+++ b/indexshare.html
@@ -22,10 +22,10 @@
     </div>
   </header>
     
-    <div class="container" style="margin-top: 30px; margin-bottom: 30px;">
+    <div class="container">
       <div class="row">
           <div class="col-12">
-            <h1 class="text-center textes">Cotiza tu Seguro Aquí</h1>
+            <h1 class="text-center textes">¡Cotiza tu seguro en segundos!<br> Elige tu vehículo:</h1>
           </div>
       </div>
       <div class="row justify-content-center text-center">
@@ -44,11 +44,6 @@
             <img src="img/pickp.png" class="icons">
           </a>
         </div>
-      </div>
-      <div class="row">
-          <div class="col-12">
-            <p class="text-center textes">Elige tu vehículo<br>¡y obtén tu cotización en segundos!</p>
-          </div>
       </div>
     </div>
    
