--- a/indexshare.html
+++ b/indexshare.html
@@ -15,9 +15,9 @@
       </div>
       <ul style="position: relative; right: 1em; color: #1a5da3; text-align: right; list-style: none; margin-top: -5em;">
         <li><b style="color: #1b4c8e;">AGENTE: </b>$NombreAgente$</li>
-        <li><b style="color: #1b4c8e;">AGENTE: </b>$NombreAgente$</li>
-        <li><b style="color: #1b4c8e;">AGENTE: </b>$NombreAgente$</li>
-        <li><b style="color: #1b4c8e;">AGENTE: </b>$NombreAgente$</li>
+        <li><b style="color: #1b4c8e;">UBICACIÓN: </b>$Agente_ubicación$</li>
+        <li><b style="color: #1b4c8e;">TELÉFONO: </b>$Agente_phone$</li>
+        <li><b style="color: #1b4c8e;">EMAIL: </b>$Agente_email$</li>
       </ul>
     </div>
   </header>
