--- a/indexshare.html
+++ b/indexshare.html
@@ -13,7 +13,7 @@
       <div class="logocas">
         <img src="https://mcpoe.github.io/cas/img/logoCAS.png" alt="Logo CAS" style="width: 100%; padding-top: 2em;">
       </div>
-      <ul style="position: relative; right: 1em; color: #1a5da3; text-align: right; list-style: none; margin-top: -5em;">
+      <ul class="infoAgent">
         <li><b style="color: #1b4c8e;">AGENTE: </b>$NombreAgente$</li>
         <li><b style="color: #1b4c8e;">UBICACIÓN: </b>$Agente_ubicación$</li>
         <li><b style="color: #1b4c8e;">TELÉFONO: </b>$Agente_phone$</li>
@@ -22,7 +22,7 @@
     </div>
   </header>
     
-    <div class="container">
+    <div class="container" style="margin-bottom: 30px;">
       <div class="row">
           <div class="col-12">
             <h1 class="text-center textes">¡Cotiza tu seguro en segundos!<br> Elige tu vehículo:</h1>
