--- a/indexshare.html
+++ b/indexshare.html
@@ -25,7 +25,7 @@
     <div class="container" style="margin-bottom: 30px;">
       <div class="row">
           <div class="col-12">
-            <h1 class="text-center textes">¡Cotiza tu seguro en segundos!<br> Elige tu vehículo:</h1>
+            <h1 class="text-center textes" style="margin-top: -2em;">¡Cotiza tu seguro en segundos!<br> Elige tu vehículo:</h1>
           </div>
       </div>
       <div class="row justify-content-center text-center">
